Fixed tutorial1 alignment styling.

--- a/src/pages/Tutorial_1.scss
+++ b/src/pages/Tutorial_1.scss
@@ -1,13 +1,12 @@
 .page-contain {
   width:31rem;
-  height: 40rem;
+  height: max-content;
   border-radius: 2rem;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  display: flex;
   flex-direction: column;
   gap: 2em;
-  justify-content: center;
+  padding: 2rem;
   align-items:center;
 }
 
@@ -15,6 +14,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  align-items: center;
   text-align: center;
 
   .enchir-icon {
